stylesheet.css
div {
	border-radius: 15px;
}

button {
  display: block;
  margin: 0 auto;
  border: none;
  background: #3a7999;
  color: #f2f2f2;
  padding: 2%;
  font-size: 18px;
  border-radius: 5px;
  position: relative;
  box-sizing: border-box;
  transition: all 500ms ease;
  text-align: center;
}
button:hover {
  background: rgba(0,0,0,0);
  box-shadow: inset 0 0 0 3px #3a7999;
}

#header {
	z-index: 1;
	position: relative;
	margin-top: 0.5em;
	width: 99.99%;
	background-color: #588C7E;
	margin-bottom: 0.2px;
}

#name {
	text-align: center;
	margin: auto;
	padding-top: 5px;
	font-size: 2.5em;
	font-family: Proxima Nova, sans-serif;
	color: #ffffff;
}

#byline, a {
	text-align: center;
	margin: auto;
	padding-top: 5px;
	padding-bottom: 15px;
	font-size: 1em;
  font-family: Garamond, serif;
	color: white;
}

#headshot {
	display:block;
	margin-left: auto;
	margin-right: auto;
	height: 80px;
	border-radius: 40px;
  border: 2px solid white;
  box-shadow: 2.5px 2.5px 1.25px #888888;
}

#container {
  width: 100%;
  margin: 0 auto;
  text-align: center;
}

#left {
  float: left;
  width: 33.3%;
  background-color: #F2E394;
  padding: 0.1px;
}

#center {
  float: left;
  width: 33.3%;
  background-color: #F2AE72;
  padding: 0.1px;
}

#right {
  float: left;
  width: 33.3%;
  background-color: #D96459;
  padding: 0.1px;
}

#footer {
  clear: both;
  z-index: 0;
  position: relative;
  width: 99.99%;
  background-color: #588C7E;
  margin-bottom: 0.2px;
  font-family: Garamond, serif;
  color: white;
}

.import {
  border: dashed 0.5px;
  border-color: yellow;
}

.mainPhoto {
  width: 150px;
  height: 150px;
  overflow: hidden;
  border: 2px solid white;
  border-radius: 75px;
  box-shadow: 2.5px 2.5px 1.25px #888888;
}

h1 {
  font-family: Proxima Nova, sans-serif;
  color: white;
}

h4, ul, ol, li {
  font-family: Garamond, serif;
  color: black;
}

